@@ -19,3 +19,5 @@ exec `iadmin mkresc test1-resc2 "unix file system" cache localhost "/opt/iRODS/i
 
 exec `iadmin atrg testResourceGroup test1-resc2`
 
+exec `iadmin mkuser anonymous rodsuser`
+
