@@ -55,4 +55,7 @@ Note that the following bug and feature requests are logged in GForge with relat
 [#625] Akubra intitial development
 - additional URI utility methods for use in Akubra
 [#631] buffering missing in streaming from file - added a new jargon.io.local.input.stream.buffer.size jargon property, as well as programmatic support.  This adds missing buffering when IRODSCommands is streaming a local file to iRODS.  This should give a slight but noticable performance boost.
- [#245] add noParaOpr keyword for put/get - TransferOptions and jargon properties now support a no parallel transfer option for get/put operations
+ [#245] add noParaOpr keyword for put/get - TransferOptions and jargon properties now support a no parallel transfer opti
+ [#632] add support for anonymous useron for get/put operations
+ - added instance metods to IRODSAccount for anonymous user 
+ - added to test setup script to create anonymous in the target server
